change display for mobile

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <main class="container mt-5">
       <nav>
         <div class="nav nav-tabs" id="nav-tab" role="tablist">
-          <a class="nav-item nav-link active" id="nav-record-tab" data-bs-toggle="tab" href="#nav-record" role="tab" aria-controls="nav-record" aria-selected="true">Record a New Game</a>
-          <a class="nav-item nav-link" id="nav-view-tab" data-bs-toggle="tab" href="#nav-view" role="tab" aria-controls="nav-view" aria-selected="false">View Previous Results</a>
+          <a class="nav-item nav-link active" id="nav-record-tab" data-bs-toggle="tab" href="#nav-record" role="tab" aria-controls="nav-record" aria-selected="true">New Game</a>
+          <a class="nav-item nav-link" id="nav-view-tab" data-bs-toggle="tab" href="#nav-view" role="tab" aria-controls="nav-view" aria-selected="false">Stats</a>
         </div>
       </nav>
       <div class="tab-content" id="nav-tabContent">
