--- a/index.html
+++ b/index.html
@@ -9,48 +9,38 @@
     <header class="py-3 bg-dark text-white text-center">
       <h1>OSL Yahtzee</h1>
     </header>
-    <main class="container mt-5">
-      <nav>
-        <div class="nav nav-tabs" id="nav-tab" role="tablist">
-          <a class="nav-item nav-link active" id="nav-record-tab" data-bs-toggle="tab" href="#nav-record" role="tab" aria-controls="nav-record" aria-selected="true">New Game</a>
-          <a class="nav-item nav-link" id="nav-view-tab" data-bs-toggle="tab" href="#nav-view" role="tab" aria-controls="nav-view" aria-selected="false">Stats</a>
-        </div>
-      </nav>
-      <div class="tab-content" id="nav-tabContent">
-        <div class="tab-pane fade show active" id="nav-record" role="tabpanel" aria-labelledby="nav-record-tab">
-          <!-- This is where the form to record a new game will go -->
-          <form class="mt-4">
+    <main class="container">
+      <section id="add-game" class="text-center m-4">
+          <button id="add-game-button" class="btn btn-primary">Add Game</button>
+      </section>
+      <div id="game-form" class="container mt-4" style="display: none;">
+        <form>
             <div class="mb-3">
-              <label for="playerName" class="form-label">Player Name</label>
-              <input type="text" class="form-control" id="playerName">
+                <label for="game-date" class="form-label">Game Date</label>
+                <input type="date" class="form-control" id="game-date" required>
             </div>
             <div class="mb-3">
-              <label for="score" class="form-label">Score</label>
-              <input type="number" class="form-control" id="score">
+                <label for="num-full-houses" class="form-label">Number of Full Houses</label>
+                <input type="number" min="0" class="form-control" id="num-full-houses" required>
+            </div>
+            <div class="mb-3">
+                <label for="num-large-straights" class="form-label">Number of Large Straights</label>
+                <input type="number" min="0" class="form-control" id="num-large-straights" required>
+            </div>
+            <div class="mb-3">
+                <label for="num-small-straights" class="form-label">Number of Small Straights</label>
+                <input type="number" min="0" class="form-control" id="num-small-straights" required>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        </div>
-        <div class="tab-pane fade" id="nav-view" role="tabpanel" aria-labelledby="nav-view-tab">
-          <!-- This is where the list of previously recorded games will go -->
-          <table class="table mt-4">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Player Name</th>
-                <th scope="col">Score</th>
-                <th scope="col">Date</th>
-              </tr>
-            </thead>
-            <tbody>
-              <!-- Rows will be dynamically generated -->
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </main>
+        </form>
+    </div>
+    
+      <section id="game-summary" style="display: none;">
+          <!-- This is where the summary of the game will go -->
+      </section>
+  </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
   </body>
 </html>  
   
